# AI-Vision-Studio

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .dockerignore  Dockerfile  celery_worker.py  pyproject.toml  requirements-cpu.txt  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  admin.py  health.py  infer.py  tasks.py  upload.py
backend/app/engine/: base.py  ocr.py  registry.py  rembg_engine.py  yolo.py
backend/app/models/: __init__.py  file.py  task.py
backend/app/preprocessing/: pipeline.py
backend/app/schemas/: inference.py  task.py
backend/app/services/: task_service.py  visualization.py
backend/app/storage/: file_manager.py
backend/app/utils/: image.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_schemas.py  test_validators.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts  router.ts
frontend/src/api/: client.ts  tasks.ts  upload.ts
frontend/src/components/: AppLayout.vue  JsonViewer.vue  ModelSelector.vue  OcrOverlay.vue  RembgCompare.vue  TaskProgressBar.vue  UploadWidget.vue  VisualizationViewer.vue  YoloOverlay.vue
frontend/src/composables/: useBase64.ts
frontend/src/stores/: history.ts  session.ts  task.ts  upload.ts
frontend/src/types/: index.ts
(+5 files in other folders)
