[project]
name = "ai-vision-studio"
version = "0.1.0"
description = "AI Vision Studio - Lightweight Computer Vision Workbench"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.0",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0,<25",
    "pillow>=10.0,<12",
    "ultralytics>=8.2,<9",
    "rembg>=2.0,<3",
    "paddleocr>=2.8,<3",
    "pydantic-settings>=2.0,<3",
    "celery>=5.4,<6",
    "redis>=5.0,<6",
    "slowapi>=0.1,<1",
    "starlette>=0.38,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]
gpu = [
    "torch>=2.4,<2.6",
    "onnxruntime-gpu>=1.18,<2",
    "paddlepaddle-gpu>=2.6,<3",
]
cpu = [
    "onnxruntime>=1.18,<2",
    "paddlepaddle>=2.6,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
